# libjerry

./: CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
patches/: 01-remove-deprecated-enum-conversions.patch  02-remove-archive-variables.patch  04-support-symbols-as-weak-keys.patch
src/: js.c
test/: CMakeLists.txt
